guidir = $(datadir)/MegaTunix/$(GUI_DATA_DIR)

gui_glade_files = 	\
		B_n_G_constants.glade \
		Dualtable-constants.glade \
		JimStim-0.x.glade \
		JimStim-2.x.glade \
		PIS-alpha_biar_16x10.glade \
		PIS-alpha_bpw_16x10.glade \
		PIS-biar_16x16.glade \
		PIS-boost_16x10.glade \
		PIS-bpw_16x16.glade \
		PIS-corrections.glade \
		PIS-ego_16x16.glade \
		PIS-runtime.glade \
	       	PIS-settings.glade \
		afrtable_8x8x2.glade \
		afrtable_12x12x2.glade \
		boost_6x6x3.glade \
		datalogging.glade \
		dt-params.glade \
		enrichments.glade \
		error_status.glade \
		inj_timing_6x6x3.glade \
		jimstim-runtime.glade \
		logviewer.glade \
		main_win32.glade \
		main.glade \
		memviewer.glade \
		ms2-accel.glade \
		ms2-alpha-n_6x6x1.glade \
		ms2-e-3.x-boost_knock_launch.glade \
		ms2-e-3.x-can.glade \
		ms2-e-3.x-corrections_misc.glade \
		ms2-e-3.x-crank_idle_warmup.glade \
		ms2-e-3.x-debugging.glade \
		ms2-e-3.0.3v-ego_rev.glade \
		ms2-e-3.x-globals.glade \
		ms2-e-3.x-ignition.glade \
		ms2-e-3.x-nitrous_staging_orfc.glade \
		ms2-e-3.0.3v-nitrous_staging_orfc.glade \
		ms2-e-3.x-noise_lag.glade \
		ms2-e-3.x-remote_outputs.glade \
		ms2-e-3.x-sequential.glade \
		ms2-e-accel.glade \
		ms2-e-boost_knock_launch.glade \
		ms2-e-boost_8x8x2.glade \
		ms2-e-corrections_misc.glade \
		ms2-e-crank_idle_warmup.glade \
		ms2-e-debugging.glade \
		ms2-e-ego_rev.glade \
		ms2-e-globals.glade \
		ms2-e-ignition.glade \
		ms2-e-nitrous_staging_orfc.glade \
		ms2-e-noise_lag.glade \
		ms2-e-runtime.glade \
		ms2-e-toothtrigger.glade \
		ms2-globals.glade \
		ms2-idle_ego_rev.glade \
		ms2-ignition.glade \
		ms2-knock_dwell.glade \
		ms2-misc-fuel.glade \
		ms2-e-rotary-split.glade \
		ms2-runtime.glade \
		ms2-user_outputs.glade \
		ms2-warmup.glade \
		msns-e-accelwizard.glade \
		msns-e-advanced.glade \
		msns-e-boost-knock.glade \
		msns-e-crank-ase.glade \
		msns-e-ego.glade \
		msns-e-features.glade \
		msns-e-fuelconstants.glade \
		msns-e-idle.glade \
		msns-e-output-pins.glade \
		msns-e-output-pins-hr-011x.glade \
		msns-e-outputs-sel.glade \
		msns-e-toothtrigger.glade \
		msns-e-traction.glade \
		msns-e-water-nos-launch.glade \
		msns-e-wheeldecode.glade \
		msns-e-wheeldecode-029yx.glade \
		msns-e-wheeldecode-hr-11d.glade \
		mtxloader.glade \
		raweditor.glade \
		rotary-trail.glade \
		runtime.glade \
		sparktable_12x12x1.glade \
		sparktable_12x12x2.glade \
		sparktable_12x12x3.glade \
		sparktable_8x8e.glade \
		template.glade \
		test.glade \
		tools.glade \
		vetable_12x12x2.glade \
		vetable_12x12x3.glade \
		vetable_16x16x3.glade \
		vetable_8x8e.glade \
		vetrim_16x16x4.glade \
		warmupwizard.glade 

gui_in_files = 	\
		B_n_G_constants.datamap.in \
		Dualtable-constants.datamap.in \
		JimStim-0.x.datamap.in \
		JimStim-2.x.datamap.in \
		PIS-alpha_biar_16x10.datamap.in \
		PIS-alpha_bpw_16x10.datamap.in \
		PIS-biar_16x16.datamap.in \
		PIS-boost_16x10.datamap.in \
		PIS-bpw_16x16.datamap.in \
		PIS-corrections.datamap.in \
		PIS-ego_16x16.datamap.in \
		PIS-runtime.datamap.in \
		PIS-settings.datamap.in \
		afrtable_8x8x2-029x.datamap.in \
		afrtable_12x12x2-MS-II.datamap.in \
		afrtable_12x12x2-MS-II-Extra.datamap.in \
		boost_6x6x3-029x.datamap.in \
		datalogging.datamap.in \
		dt-params.datamap.in \
		enrichments_BnG.datamap.in \
		error_status.datamap.in \
		jimstim-runtime.datamap.in \
		logviewer.datamap.in \
		memviewer.datamap.in \
		ms2-accel.datamap.in \
		ms2-alpha-n_6x6x1.datamap.in \
		ms2-e-3.x-accel.datamap.in \
		ms2-e-3.x-boost_knock_launch.datamap.in \
		ms2-e-3.x-can.datamap.in \
		ms2-e-3.x-corrections_misc.datamap.in \
		ms2-e-3.x-crank_idle_warmup.datamap.in \
		ms2-e-3.x-debugging.datamap.in \
		ms2-e-3.x-ego_rev.datamap.in \
		ms2-e-3.0.3v-ego_rev.datamap.in \
		ms2-e-3.x-globals.datamap.in \
		ms2-e-3.x-ignition.datamap.in \
		ms2-e-3.0.3v-ignition.datamap.in \
		ms2-e-3.x-inj_timing_6x6x3.datamap.in \
		ms2-e-3.0.3v-inj_timing_6x6x3.datamap.in \
		ms2-e-3.x-local_outputs.datamap.in \
		ms2-e-3.x-nitrous_staging_orfc.datamap.in \
		ms2-e-3.x-noise_lag.datamap.in \
		ms2-e-3.x-remote_outputs.datamap.in \
		ms2-e-3.x-sequential.datamap.in \
		ms2-e-accel.datamap.in \
		ms2-e-boost_knock_launch.datamap.in \
		ms2-e-boost_8x8x2.datamap.in \
		ms2-e-corrections_misc.datamap.in \
		ms2-e-crank_idle_warmup.datamap.in \
		ms2-e-debugging.datamap.in \
		ms2-e-ego_rev.datamap.in \
		ms2-e-globals.datamap.in \
		ms2-e-ignition.datamap.in \
		ms2-e-nitrous_staging_orfc.datamap.in \
		ms2-e-noise_lag.datamap.in \
		ms2-e-rotary-split.datamap.in \
		ms2-e-runtime.datamap.in \
		ms2-e-toothtrigger-2.1.x.datamap.in \
		ms2-e-toothtrigger-3.x.datamap.in \
		ms2-globals.datamap.in \
		ms2-idle_ego_rev.datamap.in \
		ms2-ignition.datamap.in \
		ms2-knock_dwell.datamap.in \
		ms2-misc-fuel.datamap.in \
		ms2-runtime.datamap.in \
		ms2-user_outputs.datamap.in \
		ms2-warmup.datamap.in \
		msns-e-accelwizard-029x.datamap.in \
		msns-e-advanced-029x.datamap.in \
		msns-e-boost-knock-029x.datamap.in \
		msns-e-crank-ase-029x.datamap.in \
		msns-e-ego-029x.datamap.in \
		msns-e-features-029x.datamap.in \
		msns-e-fuelconstants-hr.datamap.in \
		msns-e-fuelconstants-029x.datamap.in \
		msns-e-idle-029x.datamap.in \
		msns-e-idle-hr.datamap.in \
		msns-e-output-pins-029x.datamap.in \
		msns-e-output-pins-hr-011x.datamap.in \
		msns-e-outputs-sel-029x.datamap.in \
		msns-e-toothtrigger-029x.datamap.in \
		msns-e-traction-029x.datamap.in \
		msns-e-water-nos-launch-029x.datamap.in \
		msns-e-wheeldecode-029x.datamap.in \
		msns-e-wheeldecode-hr_10x.datamap.in \
		msns-e-wheeldecode-hr_11d.datamap.in \
		raweditor.datamap.in \
		rotary-trail-029x.datamap.in \
		runtime.datamap.in \
		sparktable_12x12x1-MS-II.datamap.in \
		sparktable_12x12x2-029x.datamap.in \
		sparktable_12x12x3-MS-II-Extra.datamap.in \
		sparktable_8x8e-EDIS.datamap.in \
		sparktable_8x8e-Std.datamap.in \
		template.datamap.in \
		test.datamap.in \
		tools.datamap.in \
		vetable_12x12x2-MS-II.datamap.in \
		vetable_12x12x3-029x.datamap.in \
		vetable_12x12x3-MS-II-Extra.datamap.in \
		vetable_16x16x3-MS-II-Extra.datamap.in \
		vetable_8x8e-BnG.datamap.in \
		vetable_8x8e-DT_1.datamap.in \
		vetable_8x8e-DT_2.datamap.in \
		vetrim_16x16x4-MS-II-Extra-3.x.datamap.in \
		warmupwizard.datamap.in 


gui_map_files = $(gui_in_files:.datamap.in=.datamap)
@INTLTOOL_DATAMAP_RULE@

gui_DATA = $(gui_map_files) $(gui_glade_files)

EXTRA_DIST = $(gui_glade_files) $(gui_in_files) README

CLEANFILES = *.gladep *.bak gmon.out *.h *.datamap
