guidir = $(datadir)/MegaTunix/$(GUI_DATA_DIR)

gui_glade_files = 	\
		B_n_G_constants.glade \
		Dualtable-constants.glade \
		JimStim-0.x.glade \
		JimStim-2.x.glade \
		PIS-alpha_biar_16x10.glade \
		PIS-alpha_bpw_16x10.glade \
		PIS-biar_16x16.glade \
		PIS-boost_16x10.glade \
		PIS-bpw_16x16.glade \
		PIS-corrections.glade \
		PIS-ego_16x16.glade \
		PIS-runtime.glade \
       	PIS-settings.glade \
		datalogging.glade \
		dt-params.glade \
		dynamic-table_x1.glade \
		dynamic-table_x2.glade \
		enrichments.glade \
		error_status.glade \
		freeems-benchtest.glade \
		freeems-debug.glade \
		freeems-ignitiontable_16x16x1.glade \
		freeems-lambdatable_16x16x1.glade \
		freeems-runtime.glade \
		freeems-tools.glade \
		freeems-vetable_16x16x1.glade \
		generic-afrtable_8x8x2.glade \
		generic-afrtable_12x12x2.glade \
		generic-boost_6x6x3.glade \
		generic-lambdatable_16x16x1.glade \
		generic-sparktable_12x12x1.glade \
		generic-sparktable_12x12x2.glade \
		generic-sparktable_12x12x3.glade \
		generic-sparktable_16x16x1.glade \
		generic-sparktable_8x8x1.glade \
		generic-vetable_12x12x2.glade \
		generic-vetable_12x12x3.glade \
		generic-vetable_16x16x1.glade \
		generic-vetable_16x16x3.glade \
		generic-vetable_8x8x1.glade \
		generictable_XxYxZ.glade \
		inj_timing_6x6x3.glade \
		jimstim-runtime.glade \
		logviewer.glade \
		main.glade \
		memviewer.glade \
		ms2-accel.glade \
		ms2-alpha-n_6x6x1.glade \
		ms2-e-3.0.3v-nitrous_staging_orfc.glade \
		ms2-e-3.0.3y-ignition.glade \
		ms2-e-3.0.3y-noise_lag.glade \
		ms2-e-3.1.1_17-crank_idle_warmup.glade \
		ms2-e-3.1.1_17-ego_rev.glade \
		ms2-e-3.1.x-crank_idle_warmup.glade \
		ms2-e-3.2.1-globals.glade \
		ms2-e-3.2.1-sequential.glade \
		ms2-e-3.x-als.glade \
		ms2-e-3.x-boost_knock_launch.glade \
		ms2-e-3.x-can.glade \
		ms2-e-3.x-corrections_misc.glade \
		ms2-e-3.x-crank_idle_warmup.glade \
		ms2-e-3.x-debugging.glade \
		ms2-e-3.x-ego_rev.glade \
		ms2-e-3.x-globals.glade \
		ms2-e-3.x-ignition.glade \
		ms2-e-3.x-nitrous_staging_orfc.glade \
		ms2-e-3.x-noise_lag.glade \
		ms2-e-3.x-remote_outputs.glade \
		ms2-e-3.x-sequential.glade \
		ms2-e-accel.glade \
		ms2-e-boost_knock_launch.glade \
		ms2-e-boost_8x8x2.glade \
		ms2-e-corrections_misc.glade \
		ms2-e-crank_idle_warmup.glade \
		ms2-e-debugging.glade \
		ms2-e-ego_rev.glade \
		ms2-e-globals.glade \
		ms2-e-ignition.glade \
		ms2-e-nitrous_staging_orfc.glade \
		ms2-e-noise_lag.glade \
		ms2-e-runtime.glade \
		ms2-e-toothtrigger.glade \
		ms2-e-vetrim_16x16x4.glade \
		ms2-globals.glade \
		ms2-2.905-globals.glade \
		ms2-idle_ego_rev.glade \
		ms2-ignition.glade \
		ms2-knock_dwell.glade \
		ms2-misc-fuel.glade \
		ms2-2.905-misc-fuel.glade \
		ms2-e-rotary-split.glade \
		ms2-runtime.glade \
		ms2-user_outputs.glade \
		ms2-warmup.glade \
		ms1-e-029yx-wheeldecode.glade \
		ms1-e-accelwizard.glade \
		ms1-e-advanced.glade \
		ms1-e-boost-knock.glade \
		ms1-e-crank-ase.glade \
		ms1-e-ego.glade \
		ms1-e-features.glade \
		ms1-e-fuelconstants.glade \
		ms1-e-hr_011x-output-pins.glade \
		ms1-e-hr_011d-wheeldecode.glade \
		ms1-e-idle.glade \
		ms1-e-output-pins.glade \
		ms1-e-outputs-sel.glade \
		ms1-e-toothtrigger.glade \
		ms1-e-traction.glade \
		ms1-e-water-nos-launch.glade \
		ms1-e-wheeldecode.glade \
		mtxloader.glade \
		rotary-trail.glade \
		runtime.glade \
		template.glade \
		test.glade \
		tools.glade \
		warmupwizard.glade 

gui_in_files = 	\
		B_n_G_constants.datamap.in \
		Dualtable-constants.datamap.in \
		JimStim-0.x.datamap.in \
		JimStim-2.x.datamap.in \
		PIS-alpha_biar_16x10.datamap.in \
		PIS-alpha_bpw_16x10.datamap.in \
		PIS-biar_16x16.datamap.in \
		PIS-boost_16x10.datamap.in \
		PIS-bpw_16x16.datamap.in \
		PIS-corrections.datamap.in \
		PIS-ego_16x16.datamap.in \
		PIS-runtime.datamap.in \
		PIS-settings.datamap.in \
		ms1-e-029x-afrtable_8x8x2.datamap.in \
		ms1-e-029x-boost_6x6x3.datamap.in \
		ms2-generic-afrtable_12x12x2.datamap.in \
		ms2-e-generic-afrtable_12x12x2.datamap.in \
		datalogging.datamap.in \
		dt-params.datamap.in \
		enrichments_BnG.datamap.in \
		error_status.datamap.in \
		freeems-debug.datamap.in \
		freeems-dynamic-ignitiontable_x1.datamap.in \
		freeems-dynamic-lambdatable_x1.datamap.in \
		freeems-dynamic-vetable_x1.datamap.in \
		freeems-runtime.datamap.in \
		freeems-benchtest.datamap.in \
		freeems-lambdatable_16x16x1.datamap.in \
		freeems-ignitiontable_16x16x1.datamap.in \
		freeems-tools.datamap.in \
		freeems-vetable_16x16x1.datamap.in \
		jimstim-runtime.datamap.in \
		logviewer.datamap.in \
		memviewer.datamap.in \
		ms1-dualtable1-vetable_8x8x1.datamap.in \
		ms1-dualtable2-vetable_8x8x1.datamap.in \
		ms1-e-029x-accelwizard.datamap.in \
		ms1-e-029x-advanced.datamap.in \
		ms1-e-029x-boost-knock.datamap.in \
		ms1-e-029x-crank-ase.datamap.in \
		ms1-e-029x-ego.datamap.in \
		ms1-e-029x-features.datamap.in \
		ms1-e-029x-fuelconstants.datamap.in \
		ms1-e-029x-idle.datamap.in \
		ms1-e-029x-outputs-sel.datamap.in \
		ms1-e-029x-output-pins.datamap.in \
		ms1-e-029x-rotary-trail.datamap.in \
		ms1-e-029x-toothtrigger.datamap.in \
		ms1-e-029x-traction.datamap.in \
		ms1-e-029x-vetable_12x12x3.datamap.in \
		ms1-e-029x-water-nos-launch.datamap.in \
		ms1-e-029x-wheeldecode.datamap.in \
		ms1-e-hr-fuelconstants.datamap.in \
		ms1-e-hr-idle.datamap.in \
		ms1-e-hr_011x-output-pins.datamap.in \
		ms1-e-hr_010x-wheeldecode.datamap.in \
		ms1-e-hr_011d-wheeldecode.datamap.in \
		ms1-generic-vetable_8x8x1.datamap.in \
		ms2-accel.datamap.in \
		ms2-2.905-accel.datamap.in \
		ms2-alpha-n_6x6x1.datamap.in \
		ms2-dynamic-vetable-x2.datamap.in \
		ms2-e-3.0.3v-ego_rev.datamap.in \
		ms2-e-3.0.3v-ignition.datamap.in \
		ms2-e-3.0.3v-inj_timing_6x6x3.datamap.in \
		ms2-e-3.1.1-corrections_misc.datamap.in \
		ms2-e-3.1.1_17-accel.datamap.in \
		ms2-e-3.1.1_17-afrtable_12x12x2.datamap.in \
		ms2-e-3.1.1_17-boost_knock_launch.datamap.in \
		ms2-e-3.1.1_17-corrections_misc.datamap.in \
		ms2-e-3.1.1_17-crank_idle_warmup.datamap.in \
		ms2-e-3.1.1_17-ego_rev.datamap.in \
		ms2-e-3.1.1_17-globals.datamap.in \
		ms2-e-3.1.1_17-inj_timing_6x6x3.datamap.in \
		ms2-e-3.1.1_17-misc-fuel.datamap.in \
		ms2-e-3.1.1_17-nitrous_staging_orfc.datamap.in \
		ms2-e-3.1.1_17-rotary-split.datamap.in \
		ms2-e-3.1.1_17-sparktable_12x12x3.datamap.in \
		ms2-e-3.1.1_17-vetable_12x12x3.datamap.in \
		ms2-e-3.1.1_17-vetable_16x16x3.datamap.in \
		ms2-e-3.1.1_17-vetrim_16x16x4.datamap.in \
		ms2-e-3.1.x-crank_idle_warmup.datamap.in \
		ms2-e-3.2.1-ego_rev.datamap.in \
		ms2-e-3.x-accel.datamap.in \
		ms2-e-3.x-als.datamap.in \
		ms2-e-3.x-boost_knock_launch.datamap.in \
		ms2-e-3.x-can.datamap.in \
		ms2-e-3.x-corrections_misc.datamap.in \
		ms2-e-3.x-crank_idle_warmup.datamap.in \
		ms2-e-3.x-debugging.datamap.in \
		ms2-e-3.x-ego_rev.datamap.in \
		ms2-e-3.x-globals.datamap.in \
		ms2-e-3.x-ignition.datamap.in \
		ms2-e-3.x-inj_timing_6x6x3.datamap.in \
		ms2-e-3.x-local_outputs.datamap.in \
		ms2-e-3.x.als-local_outputs.datamap.in \
		ms2-e-3.x-nitrous_staging_orfc.datamap.in \
		ms2-e-3.x-noise_lag.datamap.in \
		ms2-e-3.x-remote_outputs.datamap.in \
		ms2-e-3.x.als-remote_outputs.datamap.in \
		ms2-e-3.x-sequential.datamap.in \
		ms2-e-accel.datamap.in \
		ms2-e-boost_knock_launch.datamap.in \
		ms2-e-boost_8x8x2.datamap.in \
		ms2-e-corrections_misc.datamap.in \
		ms2-e-crank_idle_warmup.datamap.in \
		ms2-e-debugging.datamap.in \
		ms2-e-ego_rev.datamap.in \
		ms2-e-globals.datamap.in \
		ms2-e-ignition.datamap.in \
		ms2-e-nitrous_staging_orfc.datamap.in \
		ms2-e-noise_lag.datamap.in \
		ms2-e-rotary-split.datamap.in \
		ms2-e-runtime.datamap.in \
		ms2-e-toothtrigger-2.1.x.datamap.in \
		ms2-e-toothtrigger-3.x.datamap.in \
		ms2-e-vetrim_16x16x4.datamap.in \
		ms2-generic-vetable_12x12x2.datamap.in \
		ms2-generic-vetable_12x12x3.datamap.in \
		ms2-generic-vetable_16x16x3.datamap.in \
		ms2-globals.datamap.in \
		ms2-2.905-globals.datamap.in \
		ms2-idle_ego_rev.datamap.in \
		ms2-ignition.datamap.in \
		ms2-knock_dwell.datamap.in \
		ms2-misc-fuel.datamap.in \
		ms2-2.905-misc-fuel.datamap.in \
		ms2-runtime.datamap.in \
		ms2-user_outputs.datamap.in \
		ms2-warmup.datamap.in \
		runtime.datamap.in \
		ms2-generic-sparktable_12x12x1.datamap.in \
		ms1-e-029x-sparktable_12x12x2.datamap.in \
		ms2-generic-sparktable_12x12x3.datamap.in \
		ms1-e-EDIS-sparktable_8x8x1.datamap.in \
		ms1-generic-sparktable_8x8x1.datamap.in \
		template.datamap.in \
		test.datamap.in \
		tools.datamap.in \
		warmupwizard.datamap.in 


gui_map_files = $(gui_in_files:.datamap.in=.datamap)
@INTLTOOL_DATAMAP_RULE@

gui_DATA = $(gui_map_files) $(gui_glade_files)

EXTRA_DIST = $(gui_glade_files) $(gui_in_files) README

CLEANFILES = *.gladep *.bak gmon.out *.h *.datamap
