lookuptablesdir = $(datadir)/MegaTunix/$(LOOKUPTABLE_DATA_DIR)

lookuptables =	cltfactor.inc \
		matfactor.inc \
		kpafactor.inc \
		kpafactor4250.inc \
		kpafactor4115.inc \
		barofactor4115.inc \
		barofactor4250.inc \
		InnoLM1_1_2V.inc \
		InnoLM1_0_5V.inc \
		TEWBLin.inc \
		DIYWB.inc \
		AEMWB.inc \
		CustomWB.inc \
		NBafr100.inc

lookuptables_DATA = $(lookuptables)

EXTRA_DIST = $(lookuptables)
