lookuptablesdir = $(datadir)/MegaTunix/$(LOOKUPTABLES_DATA_DIR)

lookuptables =	cltfactor.inc \
		gm3800clt.inc \
		matfactor.inc \
		gm3800mat.inc \
		kpafactor.inc \
		kpafactor4250.inc \
		kpafactor4115.inc \
		kpafactorMPXH6400A.inc \
		barofactor4115.inc \
		barofactor4250.inc \
		InnoLC1_0_5V.inc \
		InnoLM1_0_5V.inc \
		InnoLM1_1_2V.inc \
		TEWBLin.inc \
		DIYWB.inc \
		AEMWB.inc \
		CustomWB.inc \
		NBafr100.inc

lookuptables_DATA = $(lookuptables)

EXTRA_DIST = $(lookuptables)
