rtmapdir = $(datadir)/MegaTunix/$(REALTIME_MAPS_DATA_DIR)

rtxml_files = 	\
		FreeEMS.xml \
		JimStim-2.x.xml \
		MS1-BnG-Std.xml \
		MS1-DT-Std.xml \
		MS1-Extra-HR-08x.xml \
		MS1-Extra-HR-011d.xml \
		MS1-Extra-029x.xml \
		MS2-Std.xml \
		MS2-Extra-2.1.0.xml \
		MS2-Extra-3.0.x.xml \
		MS2-Extra-3.0.3w.xml \
		MS2-Extra-3.0.3y.xml \
		MS2-Extra-3.1.1_17.xml \
		MS2-Extra-3.2.1.xml \
		MS3-Extra-1.0.x.xml \
		MS3-Extra-1.1.0.xml \
		PIS_V1_00-firmware.xml 


rtmap_DATA = $(rtxml_files)

EXTRA_DIST = $(rtxml_files) README

CLEANFILES = *.rtv_map *.h

