rtsliderdir = $(datadir)/MegaTunix/$(RTSLIDERS_DATA_DIR)

rtslider_files = 	README \
			DT-firmware.xml \
			JimStim-2.x-firmware.xml \
			MSnS-Extra-firmware.xml \
			MS1-Std-firmware.xml \
			MS2-Extra-firmware.xml \
			MS2-Std-firmware.xml \
			PIS_V1_00-firmware.xml

rtslider_DATA = $(rtslider_files)

EXTRA_DIST = $(rtslider_DATA)
