rtsliderdir = $(datadir)/MegaTunix/$(RTSLIDERS_DATA_DIR)

rtslider_files = 	README \
			LibreEMS.xml \
			JimStim-2.x.xml \
			MS1-DT.xml \
			MS1-Extra.xml \
			MS1-Std.xml \
			MS2-Extra.xml \
			MS2-Std.xml \
			MS3-Extra.xml \
			PIS_V1_00.xml

rtslider_DATA = $(rtslider_files)

EXTRA_DIST = $(rtslider_DATA)
