rtstatusdir = $(datadir)/MegaTunix/$(RTSTATUS_DATA_DIR)

rtstatus_files = \
		LibreEMS.xml \
		JimStim-2.x.xml \
		MS1-Extra.xml \
		MS1-Std.xml \
		MS2-Extra.xml \
		MS2-Extra-ALS.xml \
		MS2-Extra-3.2.1.xml \
		MS2-Std.xml \
		MS3-Extra.xml \
		PIS_V1_00.xml

rtstatus_DATA = $(rtstatus_files)

EXTRA_DIST = $(rtstatus_DATA) README

