rttextdir = $(datadir)/MegaTunix/$(RTTEXT_DATA_DIR)

rttext_files = 	\
		DT-firmware.xml \
		JimStim-2.x-firmware.xml \
		MS1-Std-firmware.xml \
		MS2-Std-firmware.xml \
		MS2-Extra-firmware.xml \
		MSnS-Extra-firmware.xml \
		PIS_V1_00-firmware.xml 

rttext_DATA = $(rttext_files)

EXTRA_DIST = $(rttext_DATA) README
