snapshotsdir = $(datadir)/MegaTunix/$(SNAPSHOTS_DATA_DIR)

snapshots_files = 	\
			Dualtable_v102.ecu \
		       	Bowling_and_Grippo_v301.ecu \
		       	MegaSquirtnSpark-Extra_029-series.ecu \
		       	MegaSquirtnSpark-Extra_029y-series.ecu \
			MegaSquirtnSpark-Extra_Highres_011x-series.ecu \
			MegaSquirtnSpark-Extra_Highres_010x-series.ecu \
			MS-II_V2.8x-series.ecu \
			MS-II-Extra_V2.1.0-series.ecu

snapshots_DATA = $(snapshots_files)

EXTRA_DIST = $(snapshots_DATA)

CLEANFILES = *.gladep *.bak gmon.out
