snapshotsdir = $(datadir)/MegaTunix/$(BACKUP_DATA_DIR)

snapshots_files = 	\
			MS1-DT-Std.ecu \
			MS1-BnG-V1.x.ecu \
			MS1-BnG-V3.x.ecu \
			JimStim_v0.x.ecu \
			JimStim_v2.x.ecu \
			MS1-Extra_029-series.ecu \
			MS1-Extra_029y-series.ecu \
			MS1-Extra_Highres_011[ab]-series.ecu \
			MS1-Extra_Highres_011d-series.ecu \
			MS1-Extra_Highres_010x-series.ecu \
			MS1-Extra_Highres_0[89]x-series.ecu \
			MS2_V2.8x-series.ecu \
			MS2-Extra_V2.1.0-series.ecu \
			MS2-Extra_V2.1.0e-series.ecu \
			MS2-Extra_V3.0.x-series.ecu \
			MS2-Extra_V3.0.3w_series.ecu \
			MS2-Extra_V3.0.3y_series.ecu \
			MS2-Extra_V3.1.0_series.ecu \
			MS2-Extra_V3.1.1_17_series.ecu \
			MS2-Extra_V3.1.x.ALS.ecu \
			MS2-Extra_V3.2.1.ecu \
			MS3-Extra_V1.0.0.ecu

snapshots_DATA = $(snapshots_files)

EXTRA_DIST = $(snapshots_DATA)

CLEANFILES = *.gladep *.bak gmon.out
