
headers = \
	3d_vetable.h \
	about_gui.h \
	api-versions.h \
	apicheck.h \
	args.h \
	binlogger.h \
	comms.h \
	comms_gui.h \
	combo_loader.h \
	combo_mask.h \
	configfile.h \
	conversions.h \
	core_gui.h \
	dashboard.h \
	dataio.h \
	datalogging_gui.h \
	debugging.h \
	defines.h \
	dispatcher.h \
	enums.h \
	firmware.h \
	getfiles.h \
	gui_handlers.h \
	hc08_loader.h \
	helpers.h \
	init.h \
	keybinder.h \
	keyparser.h \
	listmgmt.h \
	loader_common.h \
	locking.h \
	logo.h \
	logviewer_core.h \
	logviewer_events.h \
	logviewer_gui.h \
	lookuptables.h \
	main.h \
	menu_handlers.h \
	mem_mgmt.h \
	mtxloader.h \
	multi_expr_loader.h \
	notifications.h \
	offline.h \
	personalities.h \
	plugin.h \
	rtv_map_loader.h \
	rtv_processor.h \
	runtime_sliders.h \
	runtime_status.h \
	runtime_text.h \
	s12x_loader.h \
	serialio.h \
	sleep_calib.h \
	stringmatch.h \
	tabloader.h \
	tag_loader.h \
	template.h \
	threads.h \
	timeout_handlers.h \
	unions.h \
	vetable_gui.h \
	visibility.h \
	warmwizard_gui.h \
	watches.h \
	widgetmgmt.h \
	winserialio.h \
	wrappers.h \
	xmlbase.h \
	xmlcomm.h 


EXTRA_DIST=$(headers)


